environments/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: game-2048
    env: dev
  ports:
  - port: 80
    targetPort: 80
